--- a/Frontend/parth-traders/src/app/user/order/order.component.css
+++ b/Frontend/parth-traders/src/app/user/order/order.component.css
@@ -1,8 +1,3 @@
-.orders-list {
-    width: 100%;
-    margin: 20px;
-}
-
 mat-table {
     width: 100%;
 }
@@ -69,4 +64,37 @@ mat-table {
     height: 100%;
     object-fit: cover;
     transition-duration: 0.4s;
+}
+
+.orders-list {
+    width: 100%;
+    margin: 20px auto;
+    max-width: 1000px;
+}
+
+.mat-elevation-z8 {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+}
+
+.mat-header-cell {
+    font-weight: bold;
+}
+
+mat-paginator {
+    margin-top: 10px;
+}
+
+button {
+    margin: 5px 0;
+}
+
+.orders-list {
+    width: 100%;
+    margin: 20px auto;
+    max-width: 1000px;
+}
+
+.selected-order {
+    background-color: #d0f0fd;
+    /* Light blue color to highlight */
 }
