--- a/Frontend/parth-traders/src/styles.css
+++ b/Frontend/parth-traders/src/styles.css
@@ -1,5 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "../node_modules/ngx-toastr/toastr.css";
 
 body::-webkit-scrollbar {
@@ -49,4 +48,14 @@ body::-webkit-scrollbar-thumb {
 
 .carousel-indicators {
   display: none !important;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
