--- a/Frontend/parth-traders/src/app/admin/header/header.component.css
+++ b/Frontend/parth-traders/src/app/admin/header/header.component.css
@@ -5,7 +5,7 @@
 .nav {
   width: 100%;
   position: fixed;
-  background: #fff;
+  background: #000;
 }
 
 .sticky-home-header {
@@ -15,14 +15,14 @@
   position: fixed;
 }
 
-.nav-item > a:hover {
-  color: #000;
+.nav-item>a:hover {
+  color: #fff;
   border-bottom: #7387ee5d 3px solid;
 }
 
 .active,
-.nav-item > a:hover.active {
-  color: #000;
+.nav-item>a:hover.active {
+  color: #fff;
   border-bottom: #3a57e8 3px solid;
 }
 
@@ -31,7 +31,7 @@
 }
 
 .logo-title {
-  color: #000;
+  color: #fff;
   margin-bottom: 0;
 }
 
@@ -43,23 +43,22 @@
 
 .home-header {
   box-shadow: none !important;
-  background: transparent !important;
   top: 23px;
 }
 
-.home-header nav > ul > li > a {
+.home-header nav>ul>li>a {
   color: #fff;
 }
 
-.home-header nav > ul ul > li:first-child {
+.home-header nav>ul ul>li:first-child {
   border-radius: 10px 10px 0 0;
 }
 
-.home-header nav > ul ul > li:last-child {
+.home-header nav>ul ul>li:last-child {
   border-radius: 0 0 10px 10px;
 }
 
-.home-header nav > ul.sf-js-enabled ul:after {
+.home-header nav>ul.sf-js-enabled ul:after {
   bottom: 100%;
   left: 50px;
   border: solid transparent;
@@ -74,7 +73,7 @@
   margin-left: -5px;
 }
 
-.home-header nav > ul > li.menu-item-has-children:hover {
+.home-header nav>ul>li.menu-item-has-children:hover {
   box-shadow: 0px 0px 0px 0px #fff;
 }
 
@@ -82,6 +81,11 @@
   padding-left: 1rem;
   display: relative;
   align-items: center;
+}
+
+.navbar-nav li a,
+button {
+  color: #fff;
 }
 
 .navbar-nav .dropdown-menu {
