- removed logger logic - populate missing field population - fixed bugs - fixed registration of user - refactor code

--- a/Frontend/parth-traders/src/app/user/authenticate/authenticate.component.html
+++ b/Frontend/parth-traders/src/app/user/authenticate/authenticate.component.html
@@ -40,6 +40,14 @@
             <label for="registerUser" class="label">Username</label>
         </div>
         <div class="input_box">
+            <input type="tel" id="registerPhone" class="input-field" required>
+            <label for="registerPhone" class="label">Phone</label>
+        </div>
+        <div class="input_box">
+            <input type="text" id="registerAddress" class="input-field" required>
+            <label for="registerAddress" class="label">Address</label>
+        </div>
+        <div class="input_box">
             <input type="email" id="registerEmail" class="input-field" required>
             <label for="registerEmail" class="label">Email</label>
         </div>
