--- a/Frontend/parth-traders/src/app/user/confirmation/confirmation.component.html
+++ b/Frontend/parth-traders/src/app/user/confirmation/confirmation.component.html
@@ -4,4 +4,5 @@
     <small>
         Your product will be shipped soon.
     </small>
+    <div id="timer">Please wait {{countdownSeconds}}...</div>
 </div>
